@@ -834,6 +834,7 @@
             <p>Made by <a href="https://github.com/oCHRONOSo" target="_blank" class="text-body-secondary">CHRONOS</a></p>
         </div>
     </footer>
+    
 </body>
 
 </html>
