@@ -25,3 +25,9 @@ added dns, dhcp and security scripts , not implemented yet
 implemented dns , dhcp (only network config)
 
 added iptables rule generator, enhanced appearences
+
+fixed broadcast out put ( io.emit for everyone, socket.emit to a specific connection)
+
+fixed double text after connecting / disconnecting (conn.shell connect variable error)
+
+fixed 
